# claudeminder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  repomix-output.xml
.github/workflows/: build.yml  release.yml  test.yml
docs/01-plans/260117-024834-claudiminder-implementation/: phase-01-backend-core.md  phase-02-tauri-scaffold.md  phase-03-frontend-ui.md  phase-04-integration.md  phase-05-testing.md  plan.md  requirements-summary.md
docs/01-plans/260117-143822-glassmorphism-redesign/: phase-01-design-system.md  phase-02-ui-components.md  phase-03-dashboard-widgets.md  phase-04-app-layout.md  phase-05-polish-integration.md  plan.md
docs/01-plans/reports/: code-reviewer-260117-132505-comprehensive-review.md  code-reviewer-260117-132934-final-comprehensive-review.md  fullstack-developer-260117-035904-goals-tracker.md  fullstack-developer-260117-035904-scheduler-modules.md  fullstack-developer-260117-124920-sidecar-integration.md  fullstack-developer-260117-145316-phase-01-design-system.md  fullstack-developer-260117-150858-glassmorphism-final.md  researcher-260117-024115-ui-themes-design.md  researcher-260117-024702-python-tui-libraries.md  researcher-260117-024702-tauri-v2-features.md  researcher-260117-143834-react-dashboard-patterns.md  researcher-260117-glassmorphism.md
docs/02-general/rules/: 00-principles.md  01-python.md  02-tauri.md  README.md
plans/260119-163542-show-mode-trace-settings/: phase-01-frontend-settings.md  phase-02-tauri-backend.md  phase-03-integration.md  plan.md
plans/reports/: code-reviewer-260119-191700-show-mode-tray-settings.md  fullstack-developer-260119-190105-phase-02-tauri-backend.md  fullstack-developer-260119-190105-phase01-frontend-settings.md  fullstack-developer-260119-191117-phase-03-integration.md  project-manager-260119-193430-show-mode-tray-settings-completion.md  scout-260119-163542-show-mode-settings.md  tester-260119-191644-show-mode-tray-settings.md
scripts/: build-sidecar-nuitka.sh  build-sidecar.sh
src/backend/: __init__.py  cli.py  sidecar.py  sidecar_entry.py
src/backend/api/: __init__.py  usage.py
src/backend/core/: __init__.py  config_manager.py  goals_tracker.py  instance_lock.py
src/backend/i18n/: __init__.py  en.py  vi.py
src/backend/models/: __init__.py  settings.py  usage.py
src/backend/scheduler/: __init__.py  focus_mode.py  notifier.py  reminder_service.py
src/backend/tui/: __init__.py  app.py  styles.tcss
src/backend/tui/widgets/: __init__.py  goals_indicator.py  offline_banner.py  reset_countdown.py  usage_display.py
src/backend/utils/: __init__.py  credentials.py
src/frontend/: index.html  package.json  playwright.config.ts  vitest.config.ts
src/frontend/e2e/: app.spec.ts
src/frontend/playwright-report/: index.html
src/frontend/scripts/: capture-ui.ts
src/frontend/src/: App.module.css  App.tsx  Overlay.tsx  main.tsx
src/frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/frontend/src-tauri/capabilities/: default.json
src/frontend/src-tauri/icons/: icon.icns
src/frontend/src-tauri/src/: events.rs  lib.rs  main.rs
src/frontend/src/hooks/: index.ts  use-countdown.ts  use-theme.ts  use-usage.ts
src/frontend/src/i18n/: en.json  index.ts  vi.json
src/frontend/src/stores/: i18n-store.ts  index.ts  settings-store.ts  theme-store.ts
src/frontend/src/styles/: globals.css  index.css  overlay.css
src/frontend/src/types/: index.ts  settings.ts  theme.ts  usage.ts
src/frontend/tests/: setup.ts
tests/: __init__.py
tests/backend/: __init__.py  conftest.py  test_api_usage.py  test_cli.py  test_config_manager.py  test_credentials.py  test_focus_mode.py  test_goals_tracker.py  test_i18n.py  test_instance_lock.py  test_models.py  test_sidecar.py  test_usage.py
tests/backend/scheduler/: test_notifier.py  test_reminder.py
tests/backend/tui/: test_widgets.py
(+61 files in other folders)
