[project]
name = "claudeminder"
version = "0.1.0"
description = "Claudeminder - Claude usage tracking & reminder tool with TUI/GUI support"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "hieubt" }]
keywords = ["claude", "anthropic", "usage", "tracker", "reminder", "tui", "gui"]

dependencies = [
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "textual>=1.0.0",
    "browser-cookie3>=0.19.1",
    "typer>=0.15.0",
    "desktop-notifier>=5.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "filelock>=3.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]
build = [
    "nuitka>=2.4.0",
    "ordered-set>=4.1.0",
]

[project.scripts]
claudeminder = "backend.cli:main"
claudeminder-sidecar = "backend.sidecar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src/backend", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --cov=src/backend --cov-report=term-missing --cov-fail-under=60"
